# automation-engine-qa-pro

./: docker-compose.yaml  main.py  makefile  pyproject.toml  test_bridge.py
app/core/: schemas.py
app/engine/: generator.py
app/engine/templates/: test_case.jinja
app/infra/: docker_manager.py  execute_mapper.py
app/ui/: main_window.py
app/ui/widgets/: editor_container_widget.py  file_explorer_widget.py  inspector_widget.py  scenario_wizard_widget.py
